2005-04-21  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: back out the CXX default from branch_0_23 for
	now (pending more testing)

2005-04-19  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: backed out the default value for CXXFLAGS, added
	a default value for CXX instead
	* Bootstrap.pm:  recognize 10.3.9
	* PkgVersion.pm: make sure NoSetCXX still works

2005-04-15  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* CLI.pm, Configure.pm: backport prompt_selection to branch_0_23
	in preparation for revising the mirror selection dialog

2005-04-11  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: add a default for CXXFLAGS for recent distributions

2005-04-05  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: gettext-tools installed during bootstrap (on
	branch_0_23 only)

2005-02-17  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: be sure that the pre-expansion of conditionals
	is only applied to ones containing "%{Distribution}"
	* Bootstrap.pm, SelfUpdate.pm: move the list of additional packages 
	to be installed to a new function in Bootstrap.pm, which can be
	shared by both modules.  Add a warning when "fink selfupdate" is
	run with an unsupported version of perl.
	* Bootstrap.pm: update modules needed for bootstrapping in 10.2-gcc3.3
	* Bootstrap.pm: remove "storable-pm" from the list of additional
	packages

2005-02-13  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: allow the creation of several .info
	files from a single .info.in, depending on %{Distribution};
	reorganize some functions to accomodate dist-module.pl

2005-02-12  Peter O'Gorman  <ogorman@users.sourceforge.net>

	* Bootstrap.pm (check_host): We work on 10.3.8.

2005-01-31  Justin F. Hallett  <thesin@users.sourceforge.net>

	* VirtPackage.pm: Added Growl virtual pkg

2005-01-30  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* *.pm: Updated POD validation errors.
