@@ -180,6 +180,11 @@ sub choose_mirrors {
 	my ($keyinfo, $listinfo);
 	my ($mirrorfile, $mirrorname, $mirrortitle);
 	my ($all_mirrors, @mirrors, $site, $mirror_order);
+	my %obsolete_mirrors = ();
+	my ($current_value, $list_of_mirrors, $property_value);
+	my ($mirror_item, $is_obsolete, $obsolete_only);
+	my @mirrors_to_choose;
+	my ($current_prompt, $default_response, $obsolete_question);
 
 	print "\n";
 	&print_breaking("Mirror selection");
@@ -190,59 +195,129 @@ sub choose_mirrors {
 
 	### step 0: determine and ask if we need to change anything
 
+
 	$missing = 0;
 	foreach $mirrorname (split(/\s+/, $listinfo->{order})) {
 		next if $mirrorname =~ /^\s*$/;
 
 		if (!$config->has_param("Mirror-$mirrorname")) {
 			$missing = 1;
+		} else {
+			$current_value = $config->param("Mirror-$mirrorname");
+			$is_obsolete = 1;
+			$list_of_mirrors = &read_properties_multival("$libpath/mirror/$mirrorname");
+			delete $list_of_mirrors->{timestamp};
+		  MIRROR_GEOG_LOOP:
+			foreach $property_value (values %{$list_of_mirrors}) {
+				foreach $mirror_item (@{$property_value}) {
+					if ($current_value eq $mirror_item) {
+						$is_obsolete = 0;
+						last MIRROR_GEOG_LOOP;
+					}
+				}
+			}
+			if ($is_obsolete) {
+				$obsolete_mirrors{$mirrorname} = 1;
+			}
 		}
 	}
+
+
 	if (!$missing) {
 		if ($mirrors_postinstall) {
+			# called from dpkg postinst script of fink-mirrors pkg
 			print "\n";
 			$answer = &prompt_boolean("The list of possible mirrors in fink has" .
-				" been updated.  Do you want to review and change your choices?", 0, 60);
-	} else {
-		$answer =
-			&prompt_boolean("All mirrors are set. Do you want to change them?", 0);
-	}
+				" been updated.  Do you want to review and change your choices?",
+				0, 60);
+		} else {
+			$answer =
+				&prompt_boolean("All mirrors are set. Do you want to change them?",
+								0);
+		}
 		if (!$answer) {
-			return;
+			if (%obsolete_mirrors) {
+				$obsolete_question = "One or more of your mirrors is set to a value which is not on the current list of mirror choices.  Do you want to leave these as you have set them?";
+				if ($mirrors_postinstall) {
+					$obsolete_only = !&prompt_boolean($obsolete_question, 0, 60);
+				} else {
+					$obsolete_only = !&prompt_boolean($obsolete_question, 0);
+				}
+			}
+			if (!$obsolete_only) {
+				return 1;
+			}
 		}
 	}
-	
+
+if ((!$obsolete_only) or (!$config->has_param("MirrorOrder"))) {	
+
 	&print_breaking("\nThe Fink team maintains mirrors known as \"Master\" mirrors, which contain ".
     				  "the sources for all fink packages. You can choose to use these mirrors first, ".
 					  "last, never, or mixed in with regular mirrors. If you don't care, just select the default.\n");
 	
-	$mirror_order = &prompt_selection_new("What mirror order should fink use when downloading sources?",
-					      [ value => $config->param_default("MirrorOrder", "MasterFirst") ], 
-					      ( "Search \"Master\" source mirrors first." => "MasterFirst",
-						"Search \"Master\" source mirrors last." => "MasterLast",
-						"Never use \"Master\" source mirrors." => "MasterNever",
-						"Search closest source mirrors first. (combine all mirrors into one set)" => "ClosestFirst" ) );
+	$mirror_order = &prompt_selection(
+		"What mirror order should fink use when downloading sources?",
+		default => [ value => $config->param_default("MirrorOrder", "MasterFirst") ], 
+		choices => [
+			"Search \"Master\" source mirrors first." => "MasterFirst",
+			"Search \"Master\" source mirrors last." => "MasterLast",
+			"Never use \"Master\" source mirrors." => "MasterNever",
+			"Search closest source mirrors first. (combine all mirrors into one set)"
+				=> "ClosestFirst"
+		]);
 	$config->set_param("MirrorOrder", $mirror_order);
+
+} else {
+	$mirror_order = $config->param("MirrorOrder");
+}
 	
 	### step 1: choose a continent
+
+if ((!$obsolete_only) or (!$config->has_param("MirrorContinent"))) {	
+
 	&print_breaking("Choose a continent:");
-	$continent = &prompt_selection_new("Your continent?",
-					   [ value => $config->param_default("MirrorContinent", "-") ],
-					   map { length($_)==3 ? ($keyinfo->{$_},$_) : () } sort keys %$keyinfo);
+	$continent = &prompt_selection("Your continent?",
+		default => [ value => $config->param_default("MirrorContinent", "-") ],
+		choices => [
+			map { length($_)==3 ? ($keyinfo->{$_},$_) : () }
+				sort keys %$keyinfo
+		]
+	);
 	$config->set_param("MirrorContinent", $continent);
 
+} else {
+	$continent = $config->param("MirrorContinent");
+}
+
 	### step 2: choose a country
+
+if ((!$obsolete_only) or (!$config->has_param("MirrorCountry"))) {	
+
 	print "\n";
 	&print_breaking("Choose a country:");
-	$country = &prompt_selection_new("Your country?",
-					 [ value => $config->param_default("MirrorCountry", $continent) ],
-					 ( "No selection - display all mirrors on the continent" => $continent,
-					   map { /^$continent-/ ? ($keyinfo->{$_},$_) : () } sort keys %$keyinfo ) );
+	$country = &prompt_selection("Your country?",
+		default => [ value => $config->param_default("MirrorCountry", $continent) ],
+		choices => [
+			"No selection - display all mirrors on the continent" => $continent,
+			map { /^$continent-/ ? ($keyinfo->{$_},$_) : () } sort keys %$keyinfo
+		]
+	);
 	$config->set_param("MirrorCountry", $country);
+
+} else {
+	$country = $config->param("MirrorCountry");
+}
 
 	### step 3: mirrors
 
-	foreach $mirrorname (split(/\s+/, $listinfo->{order})) {
+	if ($obsolete_only) {
+		@mirrors_to_choose = keys %obsolete_mirrors;
+	} else {
+		@mirrors_to_choose = split(/\s+/, $listinfo->{order});
+	}
+
+	foreach $mirrorname (@mirrors_to_choose) {
 		next if $mirrorname =~ /^\s*$/;
 
 		$mirrorfile = "$libpath/mirror/$mirrorname";
@@ -255,9 +330,16 @@ sub choose_mirrors {
 
 		@mirrors = ();
 
+		if ($obsolete_mirrors{$mirrorname}) {
+			$current_prompt = "Current setting (not on current list of mirrors):\n\t\t ";
+			$default_response = 2;
+		} else {
+			$current_prompt = "Current setting:";
+			$default_response = 1;
+		}
 		$def_value = $config->param_default("Mirror-$mirrorname", "");
 		if ($def_value) {
-			push @mirrors, ( "Current setting: $def_value" => $def_value );
+			push @mirrors, ( "$current_prompt $def_value" => $def_value );
 		}
 
 		if (exists $all_mirrors->{primary}) {
@@ -272,12 +354,21 @@ sub choose_mirrors {
 
 		print "\n";
 		&print_breaking("Choose a mirror for '$mirrortitle':");
-		$answer = &prompt_selection_new("Mirror for $mirrortitle?",
-						[ number => 1 ],
-						@mirrors );
+		if ($mirrors_postinstall) {
+		$answer = &prompt_selection("Mirror for $mirrortitle?",
+						default => [ number => $default_response ],
+						choices => \@mirrors,
+						timeout => 60 );
+	} else {
+		$answer = &prompt_selection("Mirror for $mirrortitle?",
+						default => [ number => $default_response ],
+						choices => \@mirrors );
+	}
 		$config->set_param("Mirror-$mirrorname", $answer);
 	}
+	return 0;
 }
+
 
 
 ### EOF
